<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.RegisterFragment">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/secondary_dark_light_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_ly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="40dp"
        app:boxStrokeColor="@color/secondary_dark_light_color"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:hintTextColor="@color/secondary_dark_light_color"
        app:layout_constraintBottom_toTopOf="@+id/password_input_ly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/type_your_email_txt"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/light_dark_color"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_ly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/secondary_dark_light_color"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/secondary_dark_light_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_re_input_ly"
        app:layout_constraintEnd_toEndOf="@+id/email_input_ly"
        app:layout_constraintStart_toStartOf="@+id/email_input_ly">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/type_your_password_txt"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/light_dark_color"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_re_input_ly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxStrokeColor="@color/secondary_dark_light_color"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/secondary_dark_light_color"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="@+id/password_input_ly"
        app:layout_constraintStart_toStartOf="@+id/password_input_ly">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_re_input"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/re_type_your_password_txt"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/light_dark_color"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="@string/register_txt"
        app:backgroundTint="@color/secondary_dark_light_color"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_re_input_ly"
        app:layout_constraintStart_toStartOf="@+id/password_re_input_ly" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_with_google_acc_btn"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/reg_google_txt"
        app:backgroundTint="@color/secondary_dark_light_color"
        app:cornerRadius="8dp"
        app:icon="@drawable/googleg_standard_color_18"
        app:layout_constraintEnd_toEndOf="@+id/password_re_input_ly"
        app:layout_constraintStart_toStartOf="@+id/password_re_input_ly"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/already_regs_txt"
        style="@style/Widget.Material3.CheckedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_to_login_txt"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/register_with_google_acc_btn"
        app:layout_constraintStart_toStartOf="@+id/register_with_google_acc_btn"
        app:layout_constraintTop_toBottomOf="@+id/register_with_google_acc_btn" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:dividerColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/already_regs_txt"
        app:layout_constraintStart_toStartOf="@+id/already_regs_txt"
        app:layout_constraintTop_toBottomOf="@+id/already_regs_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>